crucible-syntax/test-data/simulator-tests/branch.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/simulator-tests/branch.cbl:11:5: error: in main
  bogus condition
  and (eq 42 cx@1:i) cp@0:b
COUNTEREXAMPLE
